[package]
categories.workspace = true
description = "Dispatch infrastructure for fuel: KernelBindingTable, per-backend registration wrappers, CompiledNode + compile_node, ExecutionPlan + compile_plan + resolve_kernel, FusedKernelRegistry, PipelinedExecutor. The layer that takes a graph and runs it against registered backends. Extracted from fuel-memory 2026-05-31."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "fuel-dispatch"
repository.workspace = true
version.workspace = true

[dependencies]
fuel-ir = { workspace = true }
fuel-backend-contract = { workspace = true }
fuel-cpu-backend = { workspace = true }
fuel-hardware = { workspace = true }
fuel-cuda-backend = { workspace = true, optional = true }
fuel-graph = { workspace = true }
fuel-memory = { workspace = true }
fuel-vulkan-backend = { workspace = true, optional = true }
bytemuck = { workspace = true }
half = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# FKC kernel-contract importer deps. FKC is unconditional core infrastructure
# (the CPU elementwise-binary family registers from its contract in
# `register_cpu_kernels`), so serde / serde_yml are always compiled — no
# feature gate.
serde = { workspace = true }
serde_yml = { workspace = true }
# Baracuda telemetry emission (default OFF — gated behind the `telemetry` feature).
serde_json = { workspace = true, optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
fuel-metal-backend = { workspace = true, optional = true }

[dev-dependencies]
# QMatMul tests construct Q4_0 weight blocks directly.
fuel-quantized = { workspace = true }
# Conv2D live-GPU tests compare against fuel-conv's CPU reference.
fuel-conv = { workspace = true }
# Telemetry sink tests write JSONL to a scratch dir (atomic tmp+rename).
tempfile = { workspace = true }

[features]
# FKC is NOT a feature — it is unconditional core infrastructure. serde /
# serde_yml are always-on deps and `pub mod fkc` is unconditional. There is
# deliberately no `fkc` gate: once a family's hand-written registration is
# deleted on migration to its contract (the CPU elementwise-binary family
# already is — see `register_cpu_kernels`), a build without the importer would
# silently lose that family. No gate ⇒ no such doomed config.
default = []
# Per-backend dispatch wrappers. Feature flags propagate the same shape
# fuel-memory used: each GPU backend's registration entry-point is
# gated behind its feature.
cuda = ["dep:fuel-cuda-backend", "fuel-memory/cuda", "fuel-hardware/cuda"]
vulkan = ["dep:fuel-vulkan-backend", "fuel-memory/vulkan", "fuel-hardware/vulkan"]
metal = ["dep:fuel-metal-backend", "fuel-memory/metal"]
# Baracuda dispatch-telemetry / miss-reporting emission (docs/session-prompts/
# baracuda-telemetry-plan.md). Reads the already-retained Judge timings; emits
# DispatchRecord/MissRecord JSONL. Default OFF; pulls fuel-ir/serde so the
# ImplId basis tuple (OpKind/DType/BackendId) serializes. (serde itself is now
# an unconditional dep, so it is no longer listed here.)
telemetry = ["dep:serde_json", "fuel-ir/serde"]
