[package]
categories.workspace = true
description = "Dispatch infrastructure for fuel: KernelBindingTable, per-backend registration wrappers, CompiledNode + compile_node, ExecutionPlan + compile_plan + resolve_kernel, FusedKernelRegistry, PipelinedExecutor. The layer that takes a graph and runs it against registered backends. Extracted from fuel-memory 2026-05-31."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "fuel-dispatch"
repository.workspace = true
version.workspace = true

[dependencies]
fuel-ir = { workspace = true }
fuel-backend-contract = { workspace = true }
fuel-cpu-backend = { workspace = true }
fuel-hardware = { workspace = true }
fuel-cuda-backend = { workspace = true, optional = true }
fuel-graph = { workspace = true }
# kiss-ref advisory cross-check (cuda-gated verify path only) — see the `cuda` feature.
fuel-kiss-ref-backend = { path = "../fuel-kiss-ref-backend", optional = true }
fuel-memory = { workspace = true }
fuel-vulkan-backend = { workspace = true, optional = true }
# Baracuda's shipped `structure_key` keyer (pure-Rust types crate — no nvcc).
# Pulled by the `cuda` feature so the telemetry `BaracudaStructureKeyProvider`
# can call it; already present transitively via fuel-cuda-backend.
baracuda-kernels-types = { workspace = true, optional = true }
# The JIT-on-request envelope — only under `jit` (the adopt-glue seam). The core
# dispatch layer stays free of it (adopt_runtime_fused takes resolved parts).
fuel-kernel-seam = { workspace = true, optional = true }
# NVRTC (crates.io-pinned, no ../baracuda checkout) — only under `cuda`, for the
# tests/jit_synth_kernel_live.rs on-device JIT-load test, which compiles a
# scalar-ABI PTX kernel at test time.
baracuda-nvrtc = { workspace = true, optional = true }
# The live JIT synthesizer, only under `jit-synth` (which also enables cuda+jit,
# providing the nvrtc + seam features kernelgen's `seam`/`nvrtc` need). Crates.io
# (exact pin) — NOT a ../baracuda path dep, so it honors the reference-only rule.
baracuda-kernelgen = { workspace = true, optional = true, features = ["seam", "nvrtc"] }
bytemuck = { workspace = true }
half = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# FKC kernel-contract importer deps. FKC is unconditional core infrastructure
# (the CPU elementwise-binary family registers from its contract in
# `register_cpu_kernels`), so serde / serde_yml / serde_json are always
# compiled — no feature gate.
serde = { workspace = true }
serde_yml = { workspace = true }
# serde_json is unconditional core infrastructure: the FKC verification ledger
# (`fkc/verify/ledger.rs`) parses a git-checked-in JSON ledger via `include_str!`
# at import time in every build (u64 revision hashes exceed 2^53, so f64-based
# YAML parsing would lose precision — serde_json parses u64 natively). Also used
# by the (optional) `telemetry` feature's JSONL emission.
serde_json = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
fuel-metal-backend = { workspace = true, optional = true }

[dev-dependencies]
# QMatMul tests construct Q4_0 weight blocks directly.
fuel-quantized = { workspace = true }
# Conv2D live-GPU tests compare against fuel-conv's CPU reference.
fuel-conv = { workspace = true }
# Telemetry sink tests write JSONL to a scratch dir (atomic tmp+rename).
tempfile = { workspace = true }

[features]
# FKC is NOT a feature — it is unconditional core infrastructure. serde /
# serde_yml / serde_json are always-on deps and `pub mod fkc` is unconditional. There is
# deliberately no `fkc` gate: once a family's hand-written registration is
# deleted on migration to its contract (the CPU elementwise-binary family
# already is — see `register_cpu_kernels`), a build without the importer would
# silently lose that family. No gate ⇒ no such doomed config.
default = []
# Per-backend dispatch wrappers. Feature flags propagate the same shape
# fuel-memory used: each GPU backend's registration entry-point is
# gated behind its feature.
cuda = ["dep:fuel-cuda-backend", "dep:baracuda-kernels-types", "dep:baracuda-nvrtc", "fuel-memory/cuda", "fuel-hardware/cuda", "dep:fuel-kiss-ref-backend"]
vulkan = ["dep:fuel-vulkan-backend", "fuel-memory/vulkan", "fuel-hardware/vulkan"]
metal = ["dep:fuel-metal-backend", "fuel-memory/metal"]
# Baracuda dispatch-telemetry / miss-reporting emission (docs/session-prompts/
# baracuda-telemetry-plan.md). Reads the already-retained Judge timings; emits
# DispatchRecord/MissRecord JSONL. Default OFF; pulls fuel-ir/serde so the
# ImplId basis tuple (OpKind/DType/BackendId) serializes. (serde itself is now
# an unconditional dep, so it is no longer listed here.)
telemetry = ["fuel-ir/serde"]
# JIT-on-request adopt glue (the seam-consumption site): synthesize -> take_kernel
# -> load kernel (caller-provided CUDA seam) -> adopt_runtime_fused. Pulls the
# envelope crate + baracuda's OperandDesc (ElementKind). Default OFF.
jit = ["dep:fuel-kernel-seam", "dep:baracuda-kernels-types"]
# The LIVE JIT loop on published crates: jit + cuda + the real BaracudaSynthesizer
# (baracuda-kernelgen, seam+nvrtc). Enables the on-device test that drives
# synthesize -> take_kernel -> load_synth_kernel -> launch with Baracuda's own
# generated kernel (not a mock). Needs the CUDA toolchain (nvrtc). Default OFF.
jit-synth = ["jit", "cuda", "dep:baracuda-kernelgen"]
