[package]
name = "fuel-examples"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
fuel = { workspace = true }
fuel-datasets = { workspace = true, optional = true }
fuel-nn = { workspace = true }
fuel-transformers = { workspace = true }
fuel-flash-attn = { workspace = true, optional = true }
fuel-onnx = { workspace = true, optional = true }

chrono = "0.4"
csv = "1.3.0"
baracuda-driver = { workspace = true, optional = true }
baracuda-nccl   = { workspace = true, optional = true }
half = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["tokio"] }
image = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
minijinja = { version = "2", features = ["loader"] }
palette = { version = "0.7.6", optional = true }
enterpolation = { version = "0.2.1", optional = true }
pyo3 = { version = "0.28", features = [
    "auto-initialize",
    "abi3-py313",
], optional = true }
rayon = { workspace = true }
rubato = { version = "1", optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { version = "0.5.3", features = ["all"], optional = true }
tokenizers = { workspace = true, features = ["fancy-regex"] }
cpal = { version = "0.15.2", optional = true }
pdf2image = { version = "0.1.2", optional = true }
tekken-rs = { version = "0.1.1", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
imageproc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
ab_glyph = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
# Necessary to disambiguate with tokio in wasm examples which are 1.28.1
tokio = "1.48.0"

[build-dependencies]
anyhow = { workspace = true }
cudaforge = { version = "0.1.2", optional = true }
hf-hub = { workspace = true, features = ["tokio"] }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "fuel/accelerate",
    "fuel-nn/accelerate",
    "fuel-transformers/accelerate",
]
cuda = [
    "fuel/cuda",
    "fuel-nn/cuda",
    "fuel-transformers/cuda",
    "dep:cudaforge",
    "dep:baracuda-driver",
]
cudnn = ["fuel/cudnn", "fuel-nn/cudnn", "fuel-transformers/cudnn"]
flash-attn = ["cuda", "fuel-transformers/flash-attn", "dep:fuel-flash-attn"]
mkl = [
    "dep:intel-mkl-src",
    "fuel/mkl",
    "fuel-nn/mkl",
    "fuel-transformers/mkl",
]
nccl = ["cuda", "fuel/nccl", "dep:baracuda-nccl", "dep:half"]
onnx = ["fuel-onnx"]
metal = ["fuel/metal", "fuel-nn/metal"]
microphone = ["cpal", "rubato"]
encodec = ["cpal", "symphonia", "rubato"]
mimi = ["cpal", "symphonia", "rubato"]
snac = ["cpal", "symphonia", "rubato"]
depth_anything_v2 = ["palette", "enterpolation"]
tekken = ["tekken-rs"]
buildtime-download = []

[[example]]
name = "llama_multiprocess"
required-features = ["cuda", "nccl", "flash-attn"]

[[example]]
name = "reinforcement-learning"
required-features = ["pyo3"]

[[example]]
name = "onnx"
required-features = ["onnx"]

[[example]]
name = "onnx-llm"
required-features = ["onnx"]

[[example]]
name = "onnx_basics"
required-features = ["onnx"]

[[example]]
name = "whisper"
required-features = ["symphonia"]

[[example]]
name = "whisper-microphone"
required-features = ["microphone"]

[[example]]
name = "mnist-training"
required-features = ["fuel-datasets"]

[[example]]
name = "llama2-c"
required-features = ["fuel-datasets"]

[[example]]
name = "mimi"
required-features = ["mimi"]

[[example]]
name = "snac"
required-features = ["snac"]

[[example]]
name = "encodec"
required-features = ["encodec"]

[[example]]
name = "depth_anything_v2"
required-features = ["depth_anything_v2"]

[[example]]
name = "silero-vad"
required-features = ["onnx"]

[[example]]
name = "colpali"
required-features = ["pdf2image"]

[[example]]
name = "voxtral"
required-features = ["symphonia"]

[[example]]
name = "bert_single_file_binary"
required-features = ["buildtime-download"]
