[package]
name = "fuel-flash-attn-cuda-sys"
version = "0.10.2"
edition = "2021"

description = "Raw FFI bindings + nvcc-built kernels for Dao-AILab FlashAttention v2 (sm80). Used by both fuel-flash-attn-cuda (eager Tensor wrapper) and fuel-cuda-backend::CudaBackend::flash_attn (lazy graph dispatch). Zero fuel deps so it sits below both."
repository = "https://github.com/huggingface/fuel"
keywords = ["cuda", "ffi", "flash-attention"]
categories = ["external-ffi-bindings", "science"]
license = "MIT OR Apache-2.0"
readme = "../fuel-flash-attn-cuda/README.md"

[dependencies]
# Intentionally empty — no fuel deps so this crate sits underneath
# both the eager wrapper and the lazy-graph CUDA backend.

[build-dependencies]
cudaforge = { workspace = true }
anyhow    = { workspace = true }
