[package]
name = "fuel-flash-attn-cuda"
version = "0.10.2"
edition = "2021"

description = "CUDA sm80 (Ampere) port of Dao-AILab FlashAttention v2 for the fuel ML framework. Eager-mode Tensor API; the lazy-graph executor reaches the kernels via the `flash-attn` feature on `fuel-cuda-backend`."
repository = "https://github.com/huggingface/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Raw FFI + nvcc-built kernels live in the -sys sibling so the lazy
# graph backend can also call them without creating a dep cycle.
fuel-flash-attn-cuda-sys = { workspace = true }
fuel            = { workspace = true, features = ["cuda"] }
fuel-cuda-backend = { workspace = true }
fuel-core-types = { workspace = true }
fuel-cpu-backend = { workspace = true }
baracuda-types  = { workspace = true }
baracuda-driver = { workspace = true }
half            = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }

[features]
default = []
cudnn = ["fuel/cudnn"]
