[package]
name = "fuel-flash-attn-v3-cuda-sys"
version = "0.10.2"
edition = "2021"

description = "Raw FFI bindings + nvcc-built kernels for Dao-AILab FlashAttention v3 (sm90 / Hopper). Used by both fuel-flash-attn-v3-cuda (eager Tensor wrapper) and fuel-cuda-backend::CudaBackend::flash_attn (lazy graph dispatch via the `flash-attn-v3` feature). C symbol is `run_mha_v3` to coexist with sm80's `run_mha`."
repository = "https://github.com/huggingface/fuel"
keywords = ["cuda", "ffi", "flash-attention", "hopper"]
categories = ["external-ffi-bindings", "science"]
license = "MIT OR Apache-2.0"
readme = "../fuel-flash-attn-v3-cuda/README.md"

[dependencies]
# Intentionally empty — no fuel deps so this crate sits underneath
# both the eager wrapper and the lazy-graph CUDA backend.

[build-dependencies]
anyhow    = { workspace = true }
num_cpus  = { workspace = true }
rayon     = { workspace = true }
cudaforge = { workspace = true }
