[package]
name = "fuel-flash-attn-v3-cuda"
version = "0.10.2"
edition = "2021"

description = "CUDA sm90 (Hopper) port of Dao-AILab FlashAttention v3 for the fuel ML framework. Eager-mode Tensor API only; lazy-graph callers go through the `flash-attn` feature on `fuel-graph-cuda`."
repository = "https://github.com/huggingface/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["cutlass/docs/**", "cutlass/test/**", "cutlass/examples/**", "cutlass/tools/**", "cutlass/media/**"]

[dependencies]
# Raw FFI + nvcc-built kernels live in the -sys sibling so both this
# eager wrapper and the lazy-graph CUDA backend can call them without
# creating a dep cycle.
fuel-flash-attn-v3-cuda-sys = { workspace = true }
fuel             = { workspace = true, features = ["cuda"] }
fuel-graph-cuda  = { workspace = true }
fuel-core-types  = { workspace = true }
fuel-cpu-backend = { workspace = true }
baracuda-types   = { workspace = true }
baracuda-driver  = { workspace = true }
half             = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
fuel-nn = { workspace = true, features = ["cuda"] }
rstest  = { workspace = true }
