[package]
name = "fuel-flash-attn-v3"
version = "0.10.2"
edition = "2021"

description = "Flash attention v3 layer for the fuel ML framework."
repository = "https://github.com/huggingface/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["cutlass/docs/**", "cutlass/test/**", "cutlass/examples/**", "cutlass/tools/**", "cutlass/media/**"]

[dependencies]
fuel = { workspace = true, features = ["cuda"] }
half = { workspace = true }

[build-dependencies]
anyhow    = { workspace = true }
num_cpus  = { workspace = true }
rayon     = { workspace = true }
cudaforge = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
fuel-nn = { workspace = true, features = ["cuda"] }
rstest  = { workspace = true }
