[package]
name = "fuel-flash-attn"
version = "0.10.2"
edition = "2021"

description = "Flash attention layer for the fuel ML framework."
repository = "https://github.com/huggingface/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
fuel = { path = "../fuel-core", features = ["cuda"], package = "fuel-core", version = "0.10.2" }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
cudaforge = "0.1.2"
anyhow = { version = "1", features = ["backtrace"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
fuel-nn = { path = "../fuel-nn", features = ["cuda"] }

[features]
default = []
cudnn = ["fuel/cudnn"]
