[package]
name = "fuel-flash-attn"
version = "0.10.2"
edition = "2021"

description = "Flash attention layer for the fuel ML framework."
repository = "https://github.com/huggingface/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
fuel = { workspace = true, features = ["cuda"] }
half = { workspace = true }

[build-dependencies]
cudaforge = { workspace = true }
anyhow    = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
fuel-nn = { workspace = true, features = ["cuda"] }

[features]
default = []
cudnn = ["fuel/cudnn"]
