[package]
    categories.workspace = true
    description          = "Fast CPU executor for the fuel lazy-graph layer. Uses gemm for matmul and delegates other ops to fuel-reference-backend."
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "fuel-graph-cpu"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    fuel-core-types        = { workspace = true }
    fuel-graph             = { workspace = true }
    fuel-reference-backend = { workspace = true }
    gemm                   = { workspace = true }
    half                   = { workspace = true }
    num-traits             = { workspace = true }
    tracing                = { workspace = true }
