[package]
    categories.workspace = true
    description          = "Backend-generic graph executor for fuel. Walks a fuel-graph computation graph using a pluggable GraphBackend trait — the same topo-walk, caching, const pool, realize loop, and tracing work for CPU, CUDA, Metal, or any future backend."
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "fuel-graph-executor"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    fuel-core-types        = { workspace = true }
    fuel-graph             = { workspace = true }
    fuel-reference-backend = { workspace = true }
    half                   = { workspace = true }
    tracing                = { workspace = true }
